usb: disable L1 LPM
NAK'ed OUT transfers never complete once the usb controller enters
L1 LPM. The issue was rootcaused to the usb controller not performing
remote wakeup when it enters L1 and a trasaction is queued.
Since, this is entirely controlled by controller's hardware,
disable L1 lpm to prevent transfer failure.

Also, init already has the required sepolicy to write to sysfs nodes.

Bug: 62038982
Test: Transfers happen with Broadwell chromebooks
Change-Id: Ibb13b5b79e1aa6a5d35ddcaffece4ef4942920b7

cherry-pick of wahoo 82880d2bc2dcee1d9fe44e7cd9f62c7b2ea7ce0d

--- a/rootdir/etc/init.mata.usb.rc
+++ b/rootdir/etc/init.mata.usb.rc
@@ -68,6 +68,7 @@ on early-boot
     setprop sys.usb.ffs.max_read 524288
     setprop sys.usb.mtp.device_type 3
     setprop sys.usb.controller "a800000.dwc3"
+    write /sys/module/libcomposite/parameters/disable_l1_for_hs "y"
 
 on boot
     setprop sys.usb.configfs 2
