--- a/rootdir/etc/init.mata.rc
+++ b/rootdir/etc/init.mata.rc
@@ -540,6 +540,7 @@ on boot
     chown system shell /sys/class/sidecar/power_control
 
 on charger
+    setprop persist.sys.usb.config mass_storage
     load_system_props
     start vendor.qcom-post-boot
     write /sys/class/leds/lcd-backlight/brightness  80
@@ -561,6 +562,7 @@ on charger
     write /sys/class/sidecar/enable_control 0
 
     start vendor.hvdcp_opti
+    setprop sys.usb.configfs 1
 
 on property:debug.ftrace.file=*
     chmod 0660 ${debug.ftrace.file}
